2026-05-24: reworked test classes and added lots of tests, most are running but some are still broken due to the             changes. will need to fix those and then we have a good test coverage for the backend logic             without UI dependency. also added some tests for the new backend architecture components.             overall, this is a big step towards a more modular and testable codebase.             next steps will be to further decouple remaining UI dependencies and to implement more             features using this new architecture.